--- a/document.less
+++ b/document.less
@@ -1,6 +1,6 @@
 // @font-face {
 //     font-family: EVAMatisseClassic;
-//     src: url(../fonts/EVA-Matisse_Classic.woff2);
+//     src: url(./EVA-Matisse-Classic.ttf);
 // }
 // @font-face {
 //     font-family: MatisseProEB;
